-Another try to fix the overflow issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -150,7 +150,8 @@
   flex-direction: column;
   // border: 1px solid red;
   overflow: hidden;
-  height: 90vh;
+  width: 100%;
+  height: 100%;;
 }
 
 .projectsContainer{
